# Kernel

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  lgtm.yml
.github/workflows/: canary.yaml  release.yml
Spark/: spark.cpp
Spark/hardware/: exceptions.cpp  exceptions.hpp  idt.cpp  idt.hpp  panic.cpp  panic.hpp  port.cpp  terminal.cpp  terminal.hpp
Spark/hardware/acpi/: acpi.cpp  acpi.hpp  apic.cpp  apic.hpp
Spark/hardware/devices/: pci.cpp  pci.hpp  vbe.cpp  vbe.hpp
Spark/hardware/mm/: mm.cpp  mm.hpp  paging.cpp  pmm.cpp  pmm.hpp  vmm.cpp  vmm.hpp
Spark/lib/: lib.cpp  spinlock.hpp
Spark/userland/: exceptions.asm  exceptions.cpp  exceptions.hpp
src/: crtbegin.asm  crtend.asm  firework_icon.hpp  kernel.asm  kernel.cpp  linker.ld  main.asm  main.cpp  multiboot.hpp  spark.cpp  stivale.hpp  vgafont.hpp
src/hardware/: exceptions.cpp  exceptions.hpp  idt.cpp  idt.hpp  interrupts.asm  msr.cpp  msr.hpp  panic.cpp  panic.hpp  port.cpp  port.hpp  terminal.cpp  terminal.hpp
src/hardware/acpi/: acpi.cpp  acpi.hpp  apic.cpp  apic.hpp
src/hardware/cpu/: cpu.cpp  cpu.hpp
src/hardware/devices/: font.hpp  pci.cpp  pci.hpp  vbe.cpp  vbe.hpp
src/hardware/mm/: mm.cpp  mm.hpp  paging.cpp  paging.hpp  pmm.cpp  pmm.hpp  vmm.cpp  vmm.hpp
src/lib/: ctype.cpp  ctype.hpp  lib.cpp  lib.hpp  linked_list.hpp  math.cpp  math.hpp  spinlock.asm  spinlock.cpp  spinlock.hpp
src/system/: debugging.cpp  debugging.hpp  exceptions.cpp  exceptions.hpp  gdt.cpp  gdt.hpp  idt.cpp  idt.hpp  interrupts.asm  msr.cpp  msr.hpp  panic.cpp  panic.hpp  port.hpp  terminal.cpp  terminal.hpp
src/system/acpi/: acpi.cpp  acpi.hpp  apic.cpp  apic.hpp  madt.cpp  madt.hpp
src/system/cpu/: apic.cpp  apic.hpp  cpu.cpp  cpu.hpp  multitasking.cpp  multitasking.hpp
src/system/devices/: pci.cpp  pci.hpp  vbe.cpp  vbe.hpp
src/system/drivers/: ac97.cpp  ac97.hpp  ahci.cpp  ahci.hpp  intel_hda.cpp  intel_hda.hpp  pci.cpp  pci.hpp  port.cpp  sata.cpp  sata.hpp  serial.cpp  serial.hpp  time.cpp  time.hpp  timer.cpp  timer.hpp  vbe.cpp
src/system/mm/: e820.hpp  mm.cpp  mm.hpp  pmm.cpp  pmm.hpp  (+2 more)
src/userland/: multitasking.cpp  multitasking.hpp
(+17 files in other folders)
